<resources>
    <string name="app_name">Github User</string>
    <string name="favorite_list">Favorite</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="search">Input Username</string>
    <string name="user_name">Username</string>
    <string name="no_data_available">Data not found</string>
    <string name="repo_title">Repository</string>
    <string name="follower_title">Followers</string>
    <string name="following_title">Following</string>
    <string name="user">User</string>
    <string name="no_name">No Name</string>
    <string name="no_bio">No Bio</string>
    <string name="follower_placeholder">100</string>
    <string name="following_placeholder">100</string>
    <string name="repos_name">Repos Name</string>
    <string name="description">Description</string>
    <string name="success_add_favorite">Add to Favorite Successfully</string>
    <string name="success_remove_favorite">Remove from Favorite Successfully</string>
</resources>