<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.UserDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:fitsSystemWindows="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleGravity="center"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/iv_user"
                    android:contentDescription="@string/app_name"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginVertical="16dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ic_user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/user"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_user"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/txt_bio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/no_bio"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_name"
                    app:layout_constraintStart_toEndOf="@+id/iv_user"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <Button
                    android:id="@+id/btnFavorite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/add_favorite"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/txt_bio"
                    app:layout_constraintStart_toEndOf="@+id/iv_user"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:visibility="visible"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextColor="@color/colorWhite"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:tabBackground="@drawable/tab_layout_selector"
            app:tabIndicatorColor="@color/colorWhite"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>